<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Infineon LPA</string>
    <string name="app_version_body">App: %1$s\nBuild type: %2$s\nVersion name: %3$s</string>
    <string name="menu_item_app_version">App version</string>
    <string name="menu_item_preferences">Preferences</string>
    <string name="menu_item_euicc_info">eUICC info</string>
    <string name="menu_item_license_info">License info</string>
    <string name="menu_item_clear_notifications">Clear notifications</string>
    <string name="menu_item_refresh_esims">Refresh eSIMs</string>
    <string name="menu_item_refresh">Refresh profiles</string>
    <string name="action_opening_reader">Opening %1$s reader…</string>
    <string name="action_getting_profiles">Getting profiles…</string>
    <string name="action_switching_profile">Switching profile…</string>
    <string name="action_disabling_profile">Disabling profile…</string>
    <string name="action_deleting_profile">Deleting profile…</string>
    <string name="action_cancel_session_heading">Cancelling profile download…</string>
    <string name="action_clearing_notifications">Clearing all pending notifications…</string>
    <string name="generic_button_ok_text">OK</string>
    <string name="generic_button_start_text">Start</string>
    <string name="generic_button_cancel_text">Cancel</string>
    <string name="generic_button_done_text">Done</string>
    <string name="profile_action_dialogue_delete_profile_heading">Delete profile?</string>
    <string name="profile_action_dialogue_disable_delete_profile_body">You\'ll immediately disconnect this device from the network.\n\nThis will not cancel your service plan.</string>
    <string name="profile_action_dialogue_switch_profile_heading">Switch profile?</string>
    <string name="profile_action_dialogue_switch_profile_body">You\'ll connect to %1$s instead of %2$s.\n\nThis will not cancel your %3$s.</string>
    <string name="profile_action_dialogue_enable_profile_heading">Enable profile?</string>
    <string name="profile_action_dialogue_enable_profile_body">You\'ll connect to %s.</string>
    <string name="profile_list_title">Infineon LPA</string>
    <string name="profile_list_available_profiles">Available Profiles</string>
    <string name="profile_list_button_add_profile_content_description">Add profile button</string>
    <string name="profile_list_item_profile_icon_content_description">Profile icon</string>
    <string name="profile_list_item_profile_details_icon_content_description">Profile details</string>
    <string name="profile_list_no_esim_available_icon">No eSIM available!</string>
    <string name="profile_details_title">Profile Details</string>
    <string name="profile_details_profile_icon_content_description">Provider icon</string>
    <string name="profile_details_nickname_edit_icon_content_description">Edit the profile nickname icon</string>
    <string name="profile_details_nickname_title">Nickname</string>
    <string name="profile_details_provider_title">Provider</string>
    <string name="profile_details_provider_example">Telefon</string>
    <string name="profile_details_name_title">Name</string>
    <string name="profile_details_name_example">Telefon</string>
    <string name="profile_details_iccid_title">ICCID</string>
    <string name="profile_details_iccid_example">98000000000000002000</string>
    <string name="profile_details_class_title">Profile Class</string>
    <string name="profile_details_class_example">Testing</string>
    <string name="profile_details_status">Status</string>
    <string name="profile_details_status_enabled">Enabled</string>
    <string name="profile_details_status_disabled">Disabled</string>
    <string name="profile_details_button_enable_text">Enable</string>
    <string name="profile_details_button_disable_text">Disable</string>
    <string name="profile_details_button_delete_text">Delete</string>
    <string name="profile_details_button_switch_text">Switch</string>
    <string name="profile_details_edit_profile_nickname_dialog_title">Edit the profile nickname</string>
    <string name="euicc_info_title">eUICC information</string>
    <string name="euicc_info_progress_getting_euicc_info">Reading eUICC information</string>
    <string name="euicc_info_eid_title">EID</string>
    <string name="euicc_info_eid_example">89034011560010000000000000000121</string>
    <string name="euicc_info_configured_addresses_title">eUICC Configured Addresses</string>
    <string name="euicc_info_configured_addresses_example">rootDSAddress: testrootsmds.gsma.com</string>
    <string name="euicc_info_tca_version_title">TCA eUICC Profile Package Version</string>
    <string name="euicc_info_tca_version_example">2.2.2</string>
    <string name="euicc_info_gsma_sgp_22_version_title">GSMA SGP.22 Version</string>
    <string name="euicc_info_gsma_sgp22_version_example">2.2.2</string>
    <string name="euicc_info_euicc_firmware_version_title">eUICC Firmware Version</string>
    <string name="euicc_info_euicc_firmware_version_example">4.6.0</string>
    <string name="euicc_info_ext_card_resource_title">Extended Card Resource Information</string>
    <string name="euicc_info_ext_card_resource_example">8101008204000B967A8304000022AA</string>
    <string name="euicc_info_ext_card_resource_memory_example">Free Non-volatile Memory: %1$s KB\nFree Volatile Memory: %2$s KB</string>
    <string name="euicc_info_uicc_capability_title">UICC Capability</string>
    <string name="euicc_info_uicc_capability_example">0111111100110110110010111</string>
    <string name="euicc_info_ts102241_version_title">JavaCard Version</string>
    <string name="euicc_info_ts102241_version_example">9.2.0</string>
    <string name="euicc_info_globalplatform_version_title">GlobalPlatform Version</string>
    <string name="euicc_info_globalplatform_version_example">2.3.0</string>
    <string name="euicc_info_rsp_capability_title">RSP Capability</string>
    <string name="euicc_info_rsp_capability_example">1001001</string>
    <string name="euicc_info_pki_ids_title">PKI IDs</string>
    <string name="euicc_info_pki_ids_example">C0BC70BA36929D43B467FF57570530E57AB8FCD8\nF54172BDF98A95D65CBEB88A38A1C11D800A85C3</string>
    <string name="euicc_info_euicc_category_title">eUICC Category</string>
    <string name="euicc_info_euicc_category_example">null</string>
    <string name="euicc_info_euicc_info_forbidden_profile_policy_rules_title">Forbidden Profile Policy Rules</string>
    <string name="euicc_info_euicc_info_forbidden_profile_policy_rules_example">11</string>
    <string name="euicc_info_protection_profile_version_title">Protection Profile Version</string>
    <string name="euicc_info_protection_profile_version_example">0.0.1</string>
    <string name="euicc_info_euicc_sas_accreditation_number_title">SAS Accreditation Number</string>
    <string name="euicc_info_euicc_sas_accreditation_number_example">GI-BA-UP-0000</string>
    <string name="euicc_info_certificationDataObject_title">Certification Data</string>
    <string name="euicc_info_certificationDataObject_example">1.2.840.1234567/myPlatformLabel</string>
    <string name="scan_qr_title">Download Profile</string>
    <string name="scan_qr_add_profile_with_qr_heading">Add profile with a QR code</string>
    <string name="scan_qr_add_profile_with_qr_body">If your provider gave you a QR code, scan it now by keeping the code centered in the box</string>
    <string name="scan_qr_button_use_this_code_text">Use this code</string>
    <string name="scan_qr_camera_permission_alert_dialog_title">Camera permission required!</string>
    <string name="scan_qr_camera_permission_alert_dialog_message">To download a new profile a QR code has to be scanned.\n\nWithout the camera permission this is not possible.\n\nThis is the last request for the camera permission. If denied, the profile download functionality will not be available. You can then grant the camera permission in the Android settings anytime.</string>
    <string name="download_profile_title">Download Profile</string>
    <string name="download_profile_authenticating_heading">Authenticating profile download service…</string>
    <string name="download_profile_authenticating_body">Contacting the profile server.</string>
    <string name="download_profile_use_provider_heading">Use %s</string>
    <string name="download_profile_use_provider_body">Your %s number is ready to add to your phone</string>
    <string name="download_profile_confirmation_code_hint">Enter confirmation code</string>
    <string name="download_profile_confirmation_code_title">Confirmation code:</string>
    <string name="download_profile_downloading_heading">Downloading…</string>
    <string name="download_profile_downloading_body">Your device is downloading a profile from %s. This can take some time.</string>
    <string name="download_profile_download_complete_heading">Download complete</string>
    <string name="pref_category_general">General settings</string>
    <string name="pref_category_se_reader">SIM slot reader settings</string>
    <string name="pref_title_select_se">Select eSIM reader</string>
    <string name="pref_title_euicc_profile_init_time">Profile initialization time (in ms)</string>
    <string name="pref_title_keep_active_profile">Keep active profile</string>
    <string name="pref_title_simslots_need_term_cap_cmd">Send Terminal Capability command</string>
    <string name="pref_title_trust_gsma_test_ci">Trust GSMA Test CI</string>
    <string name="pref_title_retry_when_fail">Retry when eSIM init Failed</string>
    <string name="pref_title_anti_retry_spam">Anti error spam</string>
    <string name="pref_key_select_se">com.infineon.esim.lpa.pref.select_se</string>
    <string name="pref_key_euicc_profile_init_time">com.infineon.esim.lpa.pref.euicc_profile_init_time</string>
    <string name="pref_key_keep_active_profile">com.infineon.esim.lpa.pref.keep_active_profile</string>
    <string name="pref_key_sim_slot_needs_term_cap_cmd">com.infineon.esim.lpa.pref.simslots_need_term_cap_cmd</string>
    <string name="pref_key_trust_gsma_test_ci">com.infineon.esim.lpa.pref.trust_gsma_test_ci</string>
    <string name="pref_key_retry_when_fail">com.infineon.esim.lpa.pref.retry_when_fail</string>
    <string name="pref_key_anti_retry_spam">com.infineon.esim.lpa.pref.anti_retry_spam</string>
    <string name="pref_summary_select_se">Select the eSIM reader to be used.</string>
    <string name="pref_summary_euicc_profile_init_time">Set the duration needed for the profile initialization with an eSIM in the SIM slot.</string>
    <string name="pref_summary_keep_active_profile">Set if the active profile on the eSIM should always be kept. This removes the option to delete the active profile.</string>
    <string name="pref_summary_sim_slot_needs_term_cap_cmd">Send the Terminal Capability command to the reader to activate the eSIM functionality.</string>
    <string name="pref_summary_trust_gsma_test_ci">Allow to connect with SM-DP+ profile servers using certificates from GSMA Test CI.</string>
    <string name="pref_summary_retry_when_fail">Retry once when eSIM initialization failed</string>
    <string name="pref_summary_anti_retry_spam">Anti error spam when initialization failed</string>
    <string name="pref_def_value_select_se" tools:ignore="Typos">NONE</string>
    <string name="pref_def_value_euicc_profile_init_time">4000</string>
    <string name="pref_def_value_keep_active_profile">true</string>
    <string name="pref_def_value_simslots_need_term_cap_cmd">true</string>
    <string name="pref_def_value_trust_gsma_test_ci">true</string>
    <string name="pref_def_value_retry_when_fail">true</string>
    <string name="pref_def_value_anti_retry_spam">true</string>
</resources>