<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ THE SOURCE CODE AND ITS RELATED DOCUMENTATION IS PROVIDED "AS IS". INFINEON
  ~ TECHNOLOGIES MAKES NO OTHER WARRANTY OF ANY KIND,WHETHER EXPRESS,IMPLIED OR,
  ~ STATUTORY AND DISCLAIMS ANY AND ALL IMPLIED WARRANTIES OF MERCHANTABILITY,
  ~ SATISFACTORY QUALITY, NON INFRINGEMENT AND FITNESS FOR A PARTICULAR PURPOSE.
  ~
  ~ THE SOURCE CODE AND DOCUMENTATION MAY INCLUDE ERRORS. INFINEON TECHNOLOGIES
  ~ RESERVES THE RIGHT TO INCORPORATE MODIFICATIONS TO THE SOURCE CODE IN LATER
  ~ REVISIONS OF IT, AND TO MAKE IMPROVEMENTS OR CHANGES IN THE DOCUMENTATION OR
  ~ THE PRODUCTS OR TECHNOLOGIES DESCRIBED THEREIN AT ANY TIME.
  ~
  ~ INFINEON TECHNOLOGIES SHALL NOT BE LIABLE FOR ANY DIRECT, INDIRECT OR
  ~ CONSEQUENTIAL DAMAGE OR LIABILITY ARISING FROM YOUR USE OF THE SOURCE CODE OR
  ~ ANY DOCUMENTATION, INCLUDING BUT NOT LIMITED TO, LOST REVENUES, DATA OR
  ~ PROFITS, DAMAGES OF ANY SPECIAL, INCIDENTAL OR CONSEQUENTIAL NATURE, PUNITIVE
  ~ DAMAGES, LOSS OF PROPERTY OR LOSS OF PROFITS ARISING OUT OF OR IN CONNECTION
  ~ WITH THIS AGREEMENT, OR BEING UNUSABLE, EVEN IF ADVISED OF THE POSSIBILITY OR
  ~ PROBABILITY OF SUCH DAMAGES AND WHETHER A CLAIM FOR SUCH DAMAGE IS BASED UPON
  ~ WARRANTY, CONTRACT, TORT, NEGLIGENCE OR OTHERWISE.
  ~
  ~ (C)Copyright INFINEON TECHNOLOGIES All rights reserved
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">


    <ImageView
        android:id="@+id/image_profile_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="0dp"
        android:background="@null"
        android:src="@drawable/profile_default"
        android:contentDescription="@string/profile_list_item_profile_icon_content_description" />

    <RelativeLayout
        android:id="@+id/relative_layout_profile_info"
        android:layout_toEndOf="@+id/image_profile_icon"
        android:layout_toStartOf="@id/image_profile_details_icon"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_provider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_details_provider_example"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            />

        <TextView
            android:id="@+id/text_profile_list_item_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_details_status_enabled"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <ImageView
        android:id="@+id/image_profile_details_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:background="@null"
        android:clickable="true"
        android:focusable="false"
        android:padding="5dp"
        android:src="@drawable/icon_gear"
        android:contentDescription="@string/profile_list_item_profile_details_icon_content_description" />
</RelativeLayout>